--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,13 +7,13 @@
 
     <fragment
         android:id="@+id/nav_profile"
-        android:name="com.example.electronicdiary.ui.profile.ProfileFragment"
+        android:name="com.example.electronicdiary.profile.ProfileFragment"
         android:label="@string/menu_profile"
         tools:layout="@layout/fragment_profile" />
 
     <fragment
         android:id="@+id/nav_search"
-        android:name="com.example.electronicdiary.ui.search.SearchFragment"
+        android:name="com.example.electronicdiary.search.SearchFragment"
         android:label="@string/menu_search"
         tools:layout="@layout/fragment_search" />
 </navigation>
