--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,12 +38,21 @@
         android:inputType="textPassword"
         android:selectAllOnFocus="true" />
 
-    <Button
-        android:id="@+id/login"
+    <CheckBox
+        android:id="@+id/is_remember_me"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="3dp"
+        android:text="@string/is_remember_me"
+        android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="3dp"
         android:enabled="false"
         android:text="@string/action_sign_in" />
 
