--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
     app:startDestination="@+id/nav_profile">
 
     <fragment
         android:id="@+id/nav_profile"
         android:name="com.example.electronicdiary.profile.ProfileFragment"
-        android:label="@string/menu_profile"
-        tools:layout="@layout/fragment_profile" />
+        android:label="@string/menu_profile" />
 
     <fragment
-        android:id="@+id/nav_search"
-        android:name="com.example.electronicdiary.search.SearchFragment"
-        android:label="@string/menu_search"
-        tools:layout="@layout/fragment_search" />
+        android:id="@+id/nav_settings"
+        android:name="com.example.electronicdiary.settings.SettingsFragment"
+        android:label="@string/menu_settings" />
 </navigation>
