--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -6,19 +6,19 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_profile"
-            android:icon="@android:drawable/ic_menu_add"
+            android:icon="@drawable/outline_account_circle_black_18dp"
             android:title="@string/menu_profile" />
         <item
             android:id="@+id/nav_search"
-            android:icon="@android:drawable/ic_menu_search"
+            android:icon="@drawable/outline_search_black_18dp"
             android:title="@string/menu_search" />
         <item
-            android:id="@+id/nav_preferences"
-            android:icon="@android:drawable/ic_menu_preferences"
-            android:title="@string/menu_preferences" />
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/outline_settings_black_18dp"
+            android:title="@string/menu_settings" />
         <item
             android:id="@+id/nav_logout"
-            android:icon="@android:drawable/ic_menu_delete"
+            android:icon="@drawable/outline_logout_black_18dp"
             android:title="@string/menu_logout" />
     </group>
 </menu>
