--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,21 @@
     <fragment
         android:id="@+id/nav_profile"
         android:name="com.example.electronicdiary.profile.ProfileFragment"
-        android:label="@string/menu_profile" />
+        android:label="@string/menu_profile">
+        <action
+            android:id="@+id/action_profile_to_group_performance"
+            app:destination="@id/nav_group_performance" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_group_performance"
+        android:name="com.example.electronicdiary.group.GroupPerformanceFragment"
+        android:label="@string/menu_group_performance">
+        <action
+            android:id="@+id/action_pop_out_to_profile"
+            app:popUpTo="@id/nav_profile"
+            app:popUpToInclusive="true" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_settings"
