--- a/app/src/main/res/layout/fragment_group_performance.xml
+++ b/app/src/main/res/layout/fragment_group_performance.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.viewpager.widget.ViewPager
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/modules_tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <!--app:tabTextColor="@color/primaryColor"
+    app:tabIndicatorColor="@color/secondaryColor"
+    app:tabSelectedTextColor="@color/secondaryDarkColor" />-->
+
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/modules_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <androidx.viewpager.widget.PagerTabStrip
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top" />
-    </androidx.viewpager.widget.ViewPager>
+        android:layout_height="match_parent" />
 </LinearLayout>
