--- a/app/src/main/res/layout/fragment_group_performance.xml
+++ b/app/src/main/res/layout/fragment_group_performance.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/modules_tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <!--app:tabTextColor="@color/primaryColor"
-    app:tabIndicatorColor="@color/secondaryColor"
-    app:tabSelectedTextColor="@color/secondaryDarkColor" />-->
+    <HorizontalScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/modules_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TableLayout
+                android:id="@+id/studentsInModuleEventsTable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:divider="@drawable/divider"
+                android:showDividers="middle|beginning|end" />
+        </LinearLayout>
+    </HorizontalScrollView>
+</ScrollView>
