--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
 
     <EditText
         android:id="@+id/user_name_edit"
-        android:layout_width="200dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="150dp"
@@ -26,10 +26,10 @@
 
     <EditText
         android:id="@+id/password_edit"
-        android:layout_width="200dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="4dp"
         android:hint="@string/prompt_password"
         android:imeActionLabel="@string/action_sign_in"
         android:imeOptions="actionDone"
@@ -41,23 +41,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="2dp"
         android:text="@string/is_remember_me"
-        android:textSize="20sp" />
+        android:textSize="16sp" />
 
-    <Button
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="2dp"
         android:enabled="false"
-        android:text="@string/action_sign_in" />
+        android:text="@string/action_sign_in"
+        android:textAlignment="center" />
 
-    <ProgressBar
+    <!--<ProgressBar
         android:id="@+id/loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:visibility="gone" />
+        android:visibility="gone" />-->
 </LinearLayout>
