--- a/app/src/main/res/layout/holder_subject.xml
+++ b/app/src/main/res/layout/holder_subject.xml
@@ -9,22 +9,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="5dp">
+        android:layout_margin="6dp"
+        app:cardCornerRadius="6dp"
+        app:cardElevation="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp">
 
             <TextView
                 android:id="@+id/subjectTitle"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:paddingStart="30dp"
-                android:paddingEnd="10dp"
+                android:layout_marginStart="20dp"
                 android:textSize="25sp"
                 android:textStyle="bold" />
         </LinearLayout>
