--- a/app/src/main/res/layout/holder_event.xml
+++ b/app/src/main/res/layout/holder_event.xml
@@ -4,33 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="5dp">
+    android:layout_margin="6dp"
+    app:cardCornerRadius="6dp"
+    app:cardElevation="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp">
 
         <TextView
             android:id="@+id/eventTitle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:paddingStart="10dp"
-            android:paddingEnd="5dp"
+            android:layout_marginEnd="4dp"
+            android:layout_weight="3"
             android:textSize="20sp" />
 
         <TextView
             android:id="@+id/eventPoints"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:gravity="center"
-            android:paddingStart="5dp"
-            android:paddingEnd="10dp"
+            android:layout_marginStart="4dp"
+            android:layout_weight="1"
             android:textSize="20sp" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
