--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -44,7 +44,7 @@
                 android:visibility="gone" />
         </LinearLayout>
 
-        <!--<LinearLayout
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -70,7 +70,7 @@
                 android:text="@string/add_group_button"
                 android:textSize="12sp"
                 android:visibility="gone" />
-        </LinearLayout>-->
+        </LinearLayout>
     </LinearLayout>
 
     <ExpandableListView
