--- a/app/src/main/res/layout/holder_admin_action.xml
+++ b/app/src/main/res/layout/holder_admin_action.xml
@@ -2,17 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="horizontal">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="6dp"
+        android:layout_margin="6dp"
         app:cardCornerRadius="6dp"
         app:cardElevation="4dp">
 
@@ -24,10 +21,11 @@
             android:paddingEnd="8dp">
 
             <TextView
-                android:id="@+id/groupTitle"
+                android:id="@+id/adminActionTitle"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textSize="20sp" />
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
