--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
         <item
@@ -9,9 +7,13 @@
             android:icon="@drawable/outline_account_circle_black_18dp"
             android:title="@string/menu_profile" />
         <item
-            android:id="@+id/nav_search"
+            android:id="@+id/nav_search_available_students"
             android:icon="@drawable/outline_search_black_18dp"
-            android:title="@string/menu_search" />
+            android:title="@string/menu_search_students" />
+        <item
+            android:id="@+id/nav_admin_actions"
+            android:icon="@drawable/outline_admin_panel_settings_black_18dp"
+            android:title="@string/admin_actions" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/outline_settings_black_18dp"
