--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -28,11 +28,15 @@
 
     <fragment
         android:id="@+id/nav_student_profile"
-        android:name="com.example.electronicdiary.student.StudentProfileFragment"
+        android:name="com.example.electronicdiary.student.profile.StudentProfileFragment"
         android:label="@string/menu_student_profile">
         <action
             android:id="@+id/action_pop_out_to_group_performance"
             app:popUpTo="@id/nav_group_performance"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_pop_out_to_search_available_students"
+            app:popUpTo="@id/nav_search_available_students"
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_student_profile_to_student_performance"
@@ -41,7 +45,7 @@
 
     <fragment
         android:id="@+id/nav_student_performance"
-        android:name="com.example.electronicdiary.student.StudentPerformanceFragment"
+        android:name="com.example.electronicdiary.student.performance.StudentPerformanceFragment"
         android:label="@string/menu_student_performance">
         <action
             android:id="@+id/action_pop_out_to_student_profile"
@@ -50,12 +54,53 @@
     </fragment>
 
     <fragment
+        android:id="@+id/nav_search_available_students"
+        android:name="com.example.electronicdiary.search.SearchAvailableStudentsFragment"
+        android:label="@string/menu_search_students">
+        <action
+            android:id="@+id/action_search_available_students_to_student_profile"
+            app:destination="@id/nav_student_profile" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_admin_actions"
+        android:name="com.example.electronicdiary.admin.AdminActionsFragment"
+        android:label="@string/admin_actions">
+        <action
+            android:id="@+id/action_admin_actions_to_search_all_groups"
+            app:destination="@id/nav_search_all_groups" />
+    </fragment>
+
+    <!--<fragment
+        android:id="@+id/nav_search_all_students"
+        android:name="com.example.electronicdiary.search.SearchAllStudentsFragment"
+        android:label="@string/menu_search_students">
+        <action
+            android:id="@+id/action_pop_out_to_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_all_students_to_search_all_groups"
+            app:destination="@id/nav_search_all_groups" />
+    </fragment>-->
+
+    <fragment
+        android:id="@+id/nav_search_all_groups"
+        android:name="com.example.electronicdiary.search.SearchAllGroupsFragment"
+        android:label="@string/menu_search_groups">
+        <action
+            android:id="@+id/action_pop_out_to_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_all_groups_to_admin_actions"
+            app:destination="@id/nav_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <fragment
         android:id="@+id/nav_settings"
         android:name="com.example.electronicdiary.settings.SettingsFragment"
         android:label="@string/menu_settings" />
-
-    <fragment
-        android:id="@+id/nav_search"
-        android:name="com.example.electronicdiary.search.SearchFragment"
-        android:label="@string/menu_search" />
 </navigation>
