--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -69,9 +69,12 @@
         <action
             android:id="@+id/action_admin_actions_to_search_all_groups"
             app:destination="@id/nav_search_all_groups" />
+        <action
+            android:id="@+id/action_admin_actions_to_search_all_students"
+            app:destination="@id/nav_search_all_students" />
     </fragment>
 
-    <!--<fragment
+    <fragment
         android:id="@+id/nav_search_all_students"
         android:name="com.example.electronicdiary.search.SearchAllStudentsFragment"
         android:label="@string/menu_search_students">
@@ -82,7 +85,7 @@
         <action
             android:id="@+id/action_search_all_students_to_search_all_groups"
             app:destination="@id/nav_search_all_groups" />
-    </fragment>-->
+    </fragment>
 
     <fragment
         android:id="@+id/nav_search_all_groups"
