--- a/app/src/main/res/layout/dialog_fragment_student_adding.xml
+++ b/app/src/main/res/layout/dialog_fragment_student_adding.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:hint="@string/name_adding_form"
+        android:hint="@string/name_form"
         android:inputType="textPersonName"
         android:textSize="20sp" />
 
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:hint="@string/second_name_adding_form"
+        android:hint="@string/second_name_form"
         android:inputType="textPersonName"
         android:textSize="20sp" />
 
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:hint="@string/login_adding_form"
+        android:hint="@string/login_form"
         android:inputType="text"
         android:textSize="20sp" />
 
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:hint="@string/password_adding_form"
+        android:hint="@string/password_form"
         android:inputType="text"
         android:textSize="20sp" />
 
@@ -52,7 +52,7 @@
         android:layout_marginTop="2dp"
         android:enabled="false"
         android:gravity="center"
-        android:text="@string/adding_login_and_password_generate"
+        android:text="@string/login_and_password_generate"
         android:textSize="18sp" />
 
 </LinearLayout>
