--- a/app/src/main/res/layout/dialog_fragment_semester_adding.xml
+++ b/app/src/main/res/layout/dialog_fragment_semester_adding.xml
@@ -11,18 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:hint="@string/semester_year_adding_form"
+        android:hint="@string/semester_year_form"
         android:inputType="number"
         android:maxLength="4"
         android:textSize="20sp" />
 
     <CheckBox
-        android:id="@+id/semesterHalfAdding"
+        android:id="@+id/isSemesterFirstHalfAdding"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:gravity="center"
-        android:text="@string/semester_half_adding_form"
+        android:text="@string/semester_half_form"
         android:textSize="18sp" />
 
 </LinearLayout>
