--- a/app/src/main/res/layout/dialog_fragment_semester_editing.xml
+++ b/app/src/main/res/layout/dialog_fragment_semester_editing.xml
@@ -7,13 +7,22 @@
     android:paddingRight="32dp">
 
     <EditText
-        android:id="@+id/groupTitleAdding"
+        android:id="@+id/semesterYearEditing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:hint="@string/group_title_form"
-        android:inputType="text"
-        android:maxLength="10"
+        android:hint="@string/semester_year_form"
+        android:inputType="number"
+        android:maxLength="4"
         android:textSize="20sp" />
+
+    <CheckBox
+        android:id="@+id/isSemesterFirstHalfEditing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:gravity="center"
+        android:text="@string/semester_half_form"
+        android:textSize="18sp" />
 
 </LinearLayout>
