--- a/app/src/main/res/layout/holder_group.xml
+++ b/app/src/main/res/layout/holder_group.xml
@@ -9,10 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="6dp"
+        android:layout_margin="6dp"
         app:cardCornerRadius="6dp"
         app:cardElevation="4dp">
 
