--- a/app/src/main/res/layout/holder_subject_with_group.xml
+++ b/app/src/main/res/layout/holder_subject_with_group.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="horizontal">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="6dp"
         app:cardCornerRadius="6dp"
@@ -24,7 +24,9 @@
                 android:id="@+id/subjectTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:textSize="20sp" />
+                android:layout_marginStart="20dp"
+                android:textSize="25sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
