--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -67,11 +67,20 @@
         android:name="com.example.electronicdiary.admin.AdminActionsFragment"
         android:label="@string/admin_actions">
         <action
-            android:id="@+id/action_admin_actions_to_search_all_groups"
-            app:destination="@id/nav_search_all_groups" />
+            android:id="@+id/action_admin_actions_to_search_groups"
+            app:destination="@id/nav_search_groups" />
         <action
             android:id="@+id/action_admin_actions_to_search_all_students"
             app:destination="@id/nav_search_all_students" />
+        <action
+            android:id="@+id/action_admin_actions_to_search_subjects"
+            app:destination="@id/nav_search_subjects" />
+        <action
+            android:id="@+id/action_admin_actions_to_search_professors"
+            app:destination="@id/nav_search_professors" />
+        <action
+            android:id="@+id/action_admin_actions_to_search_semesters"
+            app:destination="@id/nav_search_semesters" />
     </fragment>
 
     <fragment
@@ -83,20 +92,74 @@
             app:popUpTo="@id/nav_admin_actions"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_search_all_students_to_search_all_groups"
-            app:destination="@id/nav_search_all_groups" />
+            android:id="@+id/action_search_all_students_to_admin_actions"
+            app:destination="@id/nav_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_all_students_to_search_groups"
+            app:destination="@id/nav_search_groups" />
     </fragment>
 
     <fragment
-        android:id="@+id/nav_search_all_groups"
-        android:name="com.example.electronicdiary.search.SearchAllGroupsFragment"
+        android:id="@+id/nav_search_groups"
+        android:name="com.example.electronicdiary.search.SearchGroupsFragment"
         android:label="@string/menu_search_groups">
         <action
             android:id="@+id/action_pop_out_to_admin_actions"
             app:popUpTo="@id/nav_admin_actions"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_search_all_groups_to_admin_actions"
+            android:id="@+id/action_pop_out_to_search_all_students"
+            app:popUpTo="@id/nav_search_all_students"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_groups_to_admin_actions"
+            app:destination="@id/nav_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_search_subjects"
+        android:name="com.example.electronicdiary.search.SearchSubjectsFragment"
+        android:label="@string/menu_search_subjects">
+        <action
+            android:id="@+id/action_pop_out_to_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_subjects_to_admin_actions"
+            app:destination="@id/nav_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_search_professors"
+        android:name="com.example.electronicdiary.search.SearchProfessorsFragment"
+        android:label="@string/menu_search_professors">
+        <action
+            android:id="@+id/action_pop_out_to_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_professors_to_admin_actions"
+            app:destination="@id/nav_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_search_semesters"
+        android:name="com.example.electronicdiary.search.SearchSemestersFragment"
+        android:label="@string/menu_search_semesters">
+        <action
+            android:id="@+id/action_pop_out_to_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_semesters_to_admin_actions"
             app:destination="@id/nav_admin_actions"
             app:popUpTo="@id/nav_admin_actions"
             app:popUpToInclusive="true" />
