--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -14,28 +14,45 @@
     </fragment>
 
     <fragment
+        android:id="@+id/nav_settings"
+        android:name="com.example.electronicdiary.settings.SettingsFragment"
+        android:label="@string/menu_settings" />
+
+    <fragment
         android:id="@+id/nav_group_performance"
         android:name="com.example.electronicdiary.group.GroupPerformanceFragment"
         android:label="@string/menu_group_performance">
         <action
-            android:id="@+id/action_pop_out_to_profile"
+            android:id="@+id/pop_out_group_performance_to_profile"
             app:popUpTo="@id/nav_profile"
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_group_performance_to_student_profile"
             app:destination="@id/nav_student_profile" />
+        <action
+            android:id="@+id/action_group_performance_to_dialog_event_info"
+            app:destination="@id/nav_dialog_event_info" />
     </fragment>
+
+    <dialog
+        android:id="@+id/nav_dialog_event_info"
+        android:name="com.example.electronicdiary.group.EventInfoDialogFragment">
+        <action
+            android:id="@+id/pop_out_dialog_event_info_to_group_performance"
+            app:popUpTo="@id/nav_group_performance"
+            app:popUpToInclusive="true" />
+    </dialog>
 
     <fragment
         android:id="@+id/nav_student_profile"
         android:name="com.example.electronicdiary.student.profile.StudentProfileFragment"
         android:label="@string/menu_student_profile">
         <action
-            android:id="@+id/action_pop_out_to_group_performance"
+            android:id="@+id/pop_out_student_profile_to_group_performance"
             app:popUpTo="@id/nav_group_performance"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_pop_out_to_search_available_students"
+            android:id="@+id/pop_out_student_profile_to_search_available_students"
             app:popUpTo="@id/nav_search_available_students"
             app:popUpToInclusive="true" />
         <action
@@ -48,7 +65,7 @@
         android:name="com.example.electronicdiary.student.performance.StudentPerformanceFragment"
         android:label="@string/menu_student_performance">
         <action
-            android:id="@+id/action_pop_out_to_student_profile"
+            android:id="@+id/pop_out_student_performance_to_student_profile"
             app:popUpTo="@id/nav_student_profile"
             app:popUpToInclusive="true" />
     </fragment>
@@ -67,6 +84,21 @@
         android:name="com.example.electronicdiary.admin.AdminActionsFragment"
         android:label="@string/admin_actions">
         <action
+            android:id="@+id/action_admin_actions_to_dialog_group_adding"
+            app:destination="@id/nav_dialog_group_adding" />
+        <action
+            android:id="@+id/action_admin_actions_to_dialog_student_adding"
+            app:destination="@id/nav_dialog_student_adding" />
+        <action
+            android:id="@+id/action_admin_actions_to_dialog_subject_adding"
+            app:destination="@id/nav_dialog_subject_adding" />
+        <action
+            android:id="@+id/action_admin_actions_to_dialog_professor_adding"
+            app:destination="@id/nav_dialog_professor_adding" />
+        <action
+            android:id="@+id/action_admin_actions_to_dialog_semester_adding"
+            app:destination="@id/nav_dialog_semester_adding" />
+        <action
             android:id="@+id/action_admin_actions_to_search_groups"
             app:destination="@id/nav_search_groups" />
         <action
@@ -83,34 +115,68 @@
             app:destination="@id/nav_search_semesters" />
     </fragment>
 
-    <fragment
-        android:id="@+id/nav_search_all_students"
-        android:name="com.example.electronicdiary.search.SearchAllStudentsFragment"
-        android:label="@string/menu_search_students">
+    <dialog
+        android:id="@+id/nav_dialog_group_adding"
+        android:name="com.example.electronicdiary.admin.adding.GroupAddingDialogFragment">
         <action
-            android:id="@+id/action_pop_out_to_admin_actions"
+            android:id="@+id/pop_out_dialog_group_adding_to_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+    </dialog>
+
+    <dialog
+        android:id="@+id/nav_dialog_student_adding"
+        android:name="com.example.electronicdiary.admin.adding.StudentAddingDialogFragment">
+        <action
+            android:id="@+id/pop_out_dialog_student_adding_to_admin_actions"
             app:popUpTo="@id/nav_admin_actions"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_search_all_students_to_admin_actions"
-            app:destination="@id/nav_admin_actions"
-            app:popUpTo="@id/nav_admin_actions"
-            app:popUpToInclusive="true" />
-        <action
-            android:id="@+id/action_search_all_students_to_search_groups"
+            android:id="@+id/action_dialog_student_adding_to_search_groups"
             app:destination="@id/nav_search_groups" />
-    </fragment>
+    </dialog>
+
+    <dialog
+        android:id="@+id/nav_dialog_subject_adding"
+        android:name="com.example.electronicdiary.admin.adding.SubjectAddingDialogFragment">
+        <action
+            android:id="@+id/pop_out_dialog_subject_adding_to_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+    </dialog>
+
+    <dialog
+        android:id="@+id/nav_dialog_professor_adding"
+        android:name="com.example.electronicdiary.admin.adding.ProfessorAddingDialogFragment">
+        <action
+            android:id="@+id/pop_out_dialog_professor_adding_to_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+    </dialog>
+
+    <dialog
+        android:id="@+id/nav_dialog_semester_adding"
+        android:name="com.example.electronicdiary.admin.adding.SemesterAddingDialogFragment">
+        <action
+            android:id="@+id/pop_out_dialog_semester_adding_to_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+    </dialog>
 
     <fragment
         android:id="@+id/nav_search_groups"
         android:name="com.example.electronicdiary.search.SearchGroupsFragment"
         android:label="@string/menu_search_groups">
         <action
-            android:id="@+id/action_pop_out_to_admin_actions"
+            android:id="@+id/pop_out_search_groups_to_dialog_student_adding"
+            app:popUpTo="@id/nav_dialog_student_adding"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/pop_out_search_groups_to_admin_actions"
             app:popUpTo="@id/nav_admin_actions"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_pop_out_to_search_all_students"
+            android:id="@+id/pop_out_search_groups_to_search_all_students"
             app:popUpTo="@id/nav_search_all_students"
             app:popUpToInclusive="true" />
         <action
@@ -118,16 +184,71 @@
             app:destination="@id/nav_admin_actions"
             app:popUpTo="@id/nav_admin_actions"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_groups_to_dialog_group_editing"
+            app:destination="@id/nav_dialog_group_editing" />
     </fragment>
+
+    <dialog
+        android:id="@+id/nav_dialog_group_editing"
+        android:name="com.example.electronicdiary.admin.editing.GroupEditingDialogFragment">
+        <action
+            android:id="@+id/pop_out_dialog_group_editing_to_search_groups"
+            app:popUpTo="@id/nav_search_groups"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_dialog_group_editing_to_admin_actions"
+            app:destination="@id/nav_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+    </dialog>
+
+    <fragment
+        android:id="@+id/nav_search_all_students"
+        android:name="com.example.electronicdiary.search.SearchAllStudentsFragment"
+        android:label="@string/menu_search_students">
+        <action
+            android:id="@+id/pop_out_search_all_students_to_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_all_students_to_dialog_student_editing"
+            app:destination="@id/nav_dialog_student_editing" />
+        <action
+            android:id="@+id/action_search_all_students_to_search_groups"
+            app:destination="@id/nav_search_groups" />
+        <action
+            android:id="@+id/action_search_all_students_to_admin_actions"
+            app:destination="@id/nav_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <dialog
+        android:id="@+id/nav_dialog_student_editing"
+        android:name="com.example.electronicdiary.admin.editing.StudentEditingDialogFragment">
+        <action
+            android:id="@+id/pop_out_dialog_student_editing_to_search_all_students"
+            app:popUpTo="@id/nav_search_all_students"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_dialog_student_editing_to_admin_actions"
+            app:destination="@id/nav_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+    </dialog>
 
     <fragment
         android:id="@+id/nav_search_subjects"
         android:name="com.example.electronicdiary.search.SearchSubjectsFragment"
         android:label="@string/menu_search_subjects">
         <action
-            android:id="@+id/action_pop_out_to_admin_actions"
+            android:id="@+id/pop_out_search_subjects_to_admin_actions"
             app:popUpTo="@id/nav_admin_actions"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_subjects_to_dialog_subject_editing"
+            app:destination="@id/nav_dialog_subject_editing" />
         <action
             android:id="@+id/action_search_subjects_to_admin_actions"
             app:destination="@id/nav_admin_actions"
@@ -135,14 +256,31 @@
             app:popUpToInclusive="true" />
     </fragment>
 
+    <dialog
+        android:id="@+id/nav_dialog_subject_editing"
+        android:name="com.example.electronicdiary.admin.editing.SubjectEditingDialogFragment">
+        <action
+            android:id="@+id/pop_out_dialog_subject_editing_to_search_subjects"
+            app:popUpTo="@id/nav_search_subjects"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_dialog_subject_editing_to_admin_actions"
+            app:destination="@id/nav_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+    </dialog>
+
     <fragment
         android:id="@+id/nav_search_professors"
         android:name="com.example.electronicdiary.search.SearchProfessorsFragment"
         android:label="@string/menu_search_professors">
         <action
-            android:id="@+id/action_pop_out_to_admin_actions"
+            android:id="@+id/pop_out_search_professors_to_admin_actions"
             app:popUpTo="@id/nav_admin_actions"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_professors_to_dialog_professor_editing"
+            app:destination="@id/nav_dialog_professor_editing" />
         <action
             android:id="@+id/action_search_professors_to_admin_actions"
             app:destination="@id/nav_admin_actions"
@@ -150,14 +288,31 @@
             app:popUpToInclusive="true" />
     </fragment>
 
+    <dialog
+        android:id="@+id/nav_dialog_professor_editing"
+        android:name="com.example.electronicdiary.admin.editing.ProfessorEditingDialogFragment">
+        <action
+            android:id="@+id/pop_out_dialog_professor_editing_to_search_professors"
+            app:popUpTo="@id/nav_search_professors"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_dialog_professor_editing_to_admin_actions"
+            app:destination="@id/nav_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+    </dialog>
+
     <fragment
         android:id="@+id/nav_search_semesters"
         android:name="com.example.electronicdiary.search.SearchSemestersFragment"
         android:label="@string/menu_search_semesters">
         <action
-            android:id="@+id/action_pop_out_to_admin_actions"
+            android:id="@+id/pop_out_search_semesters_to_admin_actions"
             app:popUpTo="@id/nav_admin_actions"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_semesters_to_dialog_semester_editing"
+            app:destination="@id/nav_dialog_semester_editing" />
         <action
             android:id="@+id/action_search_semesters_to_admin_actions"
             app:destination="@id/nav_admin_actions"
@@ -165,8 +320,17 @@
             app:popUpToInclusive="true" />
     </fragment>
 
-    <fragment
-        android:id="@+id/nav_settings"
-        android:name="com.example.electronicdiary.settings.SettingsFragment"
-        android:label="@string/menu_settings" />
+    <dialog
+        android:id="@+id/nav_dialog_semester_editing"
+        android:name="com.example.electronicdiary.admin.editing.SemesterEditingDialogFragment">
+        <action
+            android:id="@+id/pop_out_dialog_semester_editing_to_search_semesters"
+            app:popUpTo="@id/nav_search_semesters"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_dialog_semester_editing_to_admin_actions"
+            app:destination="@id/nav_admin_actions"
+            app:popUpTo="@id/nav_admin_actions"
+            app:popUpToInclusive="true" />
+    </dialog>
 </navigation>
