--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -13,7 +13,8 @@
         <item
             android:id="@+id/nav_admin_actions"
             android:icon="@drawable/outline_admin_panel_settings_black_18dp"
-            android:title="@string/admin_actions" />
+            android:title="@string/admin_actions"
+            android:visible="false" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/outline_settings_black_18dp"
