--- a/app/src/main/res/layout-land/fragment_module.xml
+++ b/app/src/main/res/layout-land/fragment_module.xml
@@ -1,23 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <HorizontalScrollView
+    <Button
+        android:id="@+id/addLessonButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/secondaryColor"
+        android:text="@string/add_lesson_button"
+        android:textAlignment="center"
+        android:textColor="@color/black" />
+
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <LinearLayout
+        <HorizontalScrollView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-            <TableLayout
-                android:id="@+id/studentsInModuleVisitsTable"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:divider="@drawable/divider"
-                android:showDividers="middle|beginning|end" />
-        </LinearLayout>
-    </HorizontalScrollView>
-</ScrollView>
+                android:orientation="vertical">
+
+                <TableLayout
+                    android:id="@+id/studentsInModuleLessonsTable"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:divider="@drawable/divider"
+                    android:showDividers="middle|beginning|end" />
+            </LinearLayout>
+        </HorizontalScrollView>
+    </ScrollView>
+</LinearLayout>
