--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -11,6 +11,12 @@
         <action
             android:id="@+id/action_profile_to_group_performance"
             app:destination="@id/nav_group_performance" />
+        <action
+            android:id="@+id/action_profile_to_search_all_subjects"
+            app:destination="@id/nav_search_all_subjects" />
+        <action
+            android:id="@+id/action_profile_to_search_available_subjects"
+            app:destination="@id/nav_search_available_subjects" />
     </fragment>
 
     <fragment
@@ -30,9 +36,38 @@
             android:id="@+id/action_group_performance_to_student_profile"
             app:destination="@id/nav_student_profile" />
         <action
+            android:id="@+id/action_group_performance_to_dialog_event_adding"
+            app:destination="@id/nav_dialog_event_adding" />
+        <action
             android:id="@+id/action_group_performance_to_dialog_event_info"
             app:destination="@id/nav_dialog_event_info" />
+        <action
+            android:id="@+id/action_group_performance_to_dialog_event_performance"
+            app:destination="@id/nav_dialog_event_performance" />
+        <action
+            android:id="@+id/action_group_performance_to_dialog_lesson_adding"
+            app:destination="@id/nav_dialog_lesson_adding" />
+        <action
+            android:id="@+id/action_group_performance_to_dialog_lesson_info"
+            app:destination="@id/nav_dialog_lesson_info" />
+        <action
+            android:id="@+id/action_group_performance_to_dialog_lesson_performance"
+            app:destination="@id/nav_dialog_lesson_performance" />
     </fragment>
+
+    <dialog
+        android:id="@+id/nav_dialog_event_adding"
+        android:name="com.example.electronicdiary.group.EventAddingDialogFragment">
+        <action
+            android:id="@+id/pop_out_dialog_event_adding_to_group_performance"
+            app:popUpTo="@id/nav_group_performance"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_dialog_event_adding_to_group_performance"
+            app:destination="@id/nav_group_performance"
+            app:popUpTo="@id/nav_group_performance"
+            app:popUpToInclusive="true" />
+    </dialog>
 
     <dialog
         android:id="@+id/nav_dialog_event_info"
@@ -41,11 +76,72 @@
             android:id="@+id/pop_out_dialog_event_info_to_group_performance"
             app:popUpTo="@id/nav_group_performance"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_dialog_event_info_to_group_performance"
+            app:destination="@id/nav_group_performance"
+            app:popUpTo="@id/nav_group_performance"
+            app:popUpToInclusive="true" />
+    </dialog>
+
+    <dialog
+        android:id="@+id/nav_dialog_event_performance"
+        android:name="com.example.electronicdiary.group.EventPerformanceDialogFragment">
+        <action
+            android:id="@+id/pop_out_dialog_event_performance_to_group_performance"
+            app:popUpTo="@id/nav_group_performance"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_dialog_event_performance_to_group_performance"
+            app:destination="@id/nav_group_performance"
+            app:popUpTo="@id/nav_group_performance"
+            app:popUpToInclusive="true" />
+    </dialog>
+
+    <dialog
+        android:id="@+id/nav_dialog_lesson_adding"
+        android:name="com.example.electronicdiary.group.LessonAddingDialogFragment">
+        <action
+            android:id="@+id/pop_out_dialog_lesson_adding_to_group_performance"
+            app:popUpTo="@id/nav_group_performance"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_dialog_lesson_adding_to_group_performance"
+            app:destination="@id/nav_group_performance"
+            app:popUpTo="@id/nav_group_performance"
+            app:popUpToInclusive="true" />
+    </dialog>
+
+    <dialog
+        android:id="@+id/nav_dialog_lesson_info"
+        android:name="com.example.electronicdiary.group.LessonInfoDialogFragment">
+        <action
+            android:id="@+id/pop_out_dialog_lesson_info_to_group_performance"
+            app:popUpTo="@id/nav_group_performance"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_dialog_lesson_info_to_group_performance"
+            app:destination="@id/nav_group_performance"
+            app:popUpTo="@id/nav_group_performance"
+            app:popUpToInclusive="true" />
+    </dialog>
+
+    <dialog
+        android:id="@+id/nav_dialog_lesson_performance"
+        android:name="com.example.electronicdiary.group.LessonPerformanceDialogFragment">
+        <action
+            android:id="@+id/pop_out_dialog_lesson_performance_to_group_performance"
+            app:popUpTo="@id/nav_group_performance"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_dialog_lesson_performance_to_group_performance"
+            app:destination="@id/nav_group_performance"
+            app:popUpTo="@id/nav_group_performance"
+            app:popUpToInclusive="true" />
     </dialog>
 
     <fragment
         android:id="@+id/nav_student_profile"
-        android:name="com.example.electronicdiary.student.profile.StudentProfileFragment"
+        android:name="com.example.electronicdiary.student.StudentProfileFragment"
         android:label="@string/menu_student_profile">
         <action
             android:id="@+id/pop_out_student_profile_to_group_performance"
@@ -62,7 +158,7 @@
 
     <fragment
         android:id="@+id/nav_student_performance"
-        android:name="com.example.electronicdiary.student.performance.StudentPerformanceFragment"
+        android:name="com.example.electronicdiary.student.StudentPerformanceFragment"
         android:label="@string/menu_student_performance">
         <action
             android:id="@+id/pop_out_student_performance_to_student_profile"
@@ -72,11 +168,47 @@
 
     <fragment
         android:id="@+id/nav_search_available_students"
-        android:name="com.example.electronicdiary.search.SearchAvailableStudentsFragment"
+        android:name="com.example.electronicdiary.search.available.SearchAvailableStudentsFragment"
         android:label="@string/menu_search_students">
         <action
             android:id="@+id/action_search_available_students_to_student_profile"
             app:destination="@id/nav_student_profile" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_search_available_subjects"
+        android:name="com.example.electronicdiary.search.available.SearchAvailableSubjectsFragment"
+        android:label="@string/menu_search_subjects">
+        <action
+            android:id="@+id/pop_out_search_available_subjects_to_profile"
+            app:popUpTo="@id/nav_profile"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_available_subjects_to_search_all_groups"
+            app:destination="@id/nav_search_all_groups" />
+        <action
+            android:id="@+id/action_search_available_subjects_to_profile"
+            app:destination="@id/nav_profile"
+            app:popUpTo="@id/nav_profile"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_available_subjects_to_search_available_groups"
+            app:destination="@id/nav_search_available_groups" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_search_available_groups"
+        android:name="com.example.electronicdiary.search.available.SearchAvailableGroupsFragment"
+        android:label="@string/menu_search_groups">
+        <action
+            android:id="@+id/pop_out_search_available_groups_to_search_available_subjects"
+            app:popUpTo="@id/nav_search_available_subjects"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_available_groups_to_profile"
+            app:destination="@id/nav_profile"
+            app:popUpTo="@id/nav_profile"
+            app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
@@ -99,14 +231,14 @@
             android:id="@+id/action_admin_actions_to_dialog_semester_adding"
             app:destination="@id/nav_dialog_semester_adding" />
         <action
-            android:id="@+id/action_admin_actions_to_search_groups"
-            app:destination="@id/nav_search_groups" />
+            android:id="@+id/action_admin_actions_to_search_all_groups"
+            app:destination="@id/nav_search_all_groups" />
         <action
             android:id="@+id/action_admin_actions_to_search_all_students"
             app:destination="@id/nav_search_all_students" />
         <action
-            android:id="@+id/action_admin_actions_to_search_subjects"
-            app:destination="@id/nav_search_subjects" />
+            android:id="@+id/action_admin_actions_to_search_all_subjects"
+            app:destination="@id/nav_search_all_subjects" />
         <action
             android:id="@+id/action_admin_actions_to_search_professors"
             app:destination="@id/nav_search_professors" />
@@ -132,8 +264,8 @@
             app:popUpTo="@id/nav_admin_actions"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_dialog_student_adding_to_search_groups"
-            app:destination="@id/nav_search_groups" />
+            android:id="@+id/action_dialog_student_adding_to_search_all_groups"
+            app:destination="@id/nav_search_all_groups" />
     </dialog>
 
     <dialog
@@ -164,37 +296,50 @@
     </dialog>
 
     <fragment
-        android:id="@+id/nav_search_groups"
-        android:name="com.example.electronicdiary.search.SearchGroupsFragment"
+        android:id="@+id/nav_search_all_groups"
+        android:name="com.example.electronicdiary.search.all.SearchAllGroupsFragment"
         android:label="@string/menu_search_groups">
         <action
-            android:id="@+id/pop_out_search_groups_to_dialog_student_adding"
+            android:id="@+id/pop_out_search_all_groups_to_dialog_student_adding"
             app:popUpTo="@id/nav_dialog_student_adding"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/pop_out_search_groups_to_admin_actions"
+            android:id="@+id/pop_out_search_all_groups_to_admin_actions"
             app:popUpTo="@id/nav_admin_actions"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/pop_out_search_groups_to_search_all_students"
+            android:id="@+id/pop_out_search_all_groups_to_search_all_students"
             app:popUpTo="@id/nav_search_all_students"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_search_groups_to_admin_actions"
+            android:id="@+id/pop_out_search_all_groups_to_search_all_subjects"
+            app:popUpTo="@id/nav_search_all_subjects"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/pop_out_search_all_groups_to_search_available_subjects"
+            app:popUpTo="@id/nav_search_available_subjects"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_all_groups_to_admin_actions"
             app:destination="@id/nav_admin_actions"
             app:popUpTo="@id/nav_admin_actions"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_search_groups_to_dialog_group_editing"
+            android:id="@+id/action_search_all_groups_to_dialog_group_editing"
             app:destination="@id/nav_dialog_group_editing" />
+        <action
+            android:id="@+id/action_search_all_groups_to_profile"
+            app:destination="@id/nav_profile"
+            app:popUpTo="@id/nav_profile"
+            app:popUpToInclusive="true" />
     </fragment>
 
     <dialog
         android:id="@+id/nav_dialog_group_editing"
         android:name="com.example.electronicdiary.admin.editing.GroupEditingDialogFragment">
         <action
-            android:id="@+id/pop_out_dialog_group_editing_to_search_groups"
-            app:popUpTo="@id/nav_search_groups"
+            android:id="@+id/pop_out_dialog_group_editing_to_search_all_groups"
+            app:popUpTo="@id/nav_search_all_groups"
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_dialog_group_editing_to_admin_actions"
@@ -205,7 +350,7 @@
 
     <fragment
         android:id="@+id/nav_search_all_students"
-        android:name="com.example.electronicdiary.search.SearchAllStudentsFragment"
+        android:name="com.example.electronicdiary.search.all.SearchAllStudentsFragment"
         android:label="@string/menu_search_students">
         <action
             android:id="@+id/pop_out_search_all_students_to_admin_actions"
@@ -215,8 +360,8 @@
             android:id="@+id/action_search_all_students_to_dialog_student_editing"
             app:destination="@id/nav_dialog_student_editing" />
         <action
-            android:id="@+id/action_search_all_students_to_search_groups"
-            app:destination="@id/nav_search_groups" />
+            android:id="@+id/action_search_all_students_to_search_all_groups"
+            app:destination="@id/nav_search_all_groups" />
         <action
             android:id="@+id/action_search_all_students_to_admin_actions"
             app:destination="@id/nav_admin_actions"
@@ -239,29 +384,36 @@
     </dialog>
 
     <fragment
-        android:id="@+id/nav_search_subjects"
-        android:name="com.example.electronicdiary.search.SearchSubjectsFragment"
+        android:id="@+id/nav_search_all_subjects"
+        android:name="com.example.electronicdiary.search.all.SearchAllSubjectsFragment"
         android:label="@string/menu_search_subjects">
         <action
-            android:id="@+id/pop_out_search_subjects_to_admin_actions"
+            android:id="@+id/pop_out_search_all_subjects_to_admin_actions"
             app:popUpTo="@id/nav_admin_actions"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_search_subjects_to_dialog_subject_editing"
+            android:id="@+id/pop_out_search_all_subjects_to_profile"
+            app:popUpTo="@id/nav_profile"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_all_subjects_to_dialog_subject_editing"
             app:destination="@id/nav_dialog_subject_editing" />
         <action
-            android:id="@+id/action_search_subjects_to_admin_actions"
+            android:id="@+id/action_search_all_subjects_to_admin_actions"
             app:destination="@id/nav_admin_actions"
             app:popUpTo="@id/nav_admin_actions"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_search_all_subjects_to_search_all_groups"
+            app:destination="@id/nav_search_all_groups" />
     </fragment>
 
     <dialog
         android:id="@+id/nav_dialog_subject_editing"
         android:name="com.example.electronicdiary.admin.editing.SubjectEditingDialogFragment">
         <action
-            android:id="@+id/pop_out_dialog_subject_editing_to_search_subjects"
-            app:popUpTo="@id/nav_search_subjects"
+            android:id="@+id/pop_out_dialog_subject_editing_to_search_all_subjects"
+            app:popUpTo="@id/nav_search_all_subjects"
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_dialog_subject_editing_to_admin_actions"
@@ -272,7 +424,7 @@
 
     <fragment
         android:id="@+id/nav_search_professors"
-        android:name="com.example.electronicdiary.search.SearchProfessorsFragment"
+        android:name="com.example.electronicdiary.search.all.SearchProfessorsFragment"
         android:label="@string/menu_search_professors">
         <action
             android:id="@+id/pop_out_search_professors_to_admin_actions"
@@ -304,7 +456,7 @@
 
     <fragment
         android:id="@+id/nav_search_semesters"
-        android:name="com.example.electronicdiary.search.SearchSemestersFragment"
+        android:name="com.example.electronicdiary.search.all.SearchSemestersFragment"
         android:label="@string/menu_search_semesters">
         <action
             android:id="@+id/pop_out_search_semesters_to_admin_actions"
