--- a/app/src/main/res/layout/dialog_fragment_lesson_adding.xml
+++ b/app/src/main/res/layout/dialog_fragment_lesson_adding.xml
@@ -12,7 +12,7 @@
         android:paddingEnd="32dp">
 
         <TextView
-            android:id="@+id/lessonAddingDateText"
+            android:id="@+id/lessonDateTextAdding"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
@@ -21,7 +21,7 @@
             android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/lessonAddingDate"
+            android:id="@+id/lessonDateAdding"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
@@ -38,7 +38,7 @@
         android:paddingEnd="32dp">
 
         <TextView
-            android:id="@+id/lessonAddingAttendPointsText"
+            android:id="@+id/lessonAttendPointsTextAdding"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
@@ -47,7 +47,7 @@
             android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/lessonAddingAttendPoints"
+            android:id="@+id/lessonAttendPointsAdding"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
