--- a/app/src/main/res/layout/dialog_fragment_student_event.xml
+++ b/app/src/main/res/layout/dialog_fragment_student_event.xml
@@ -12,20 +12,21 @@
         android:paddingEnd="32dp">
 
         <TextView
-            android:id="@+id/lessonPerformanceIsAttendedText"
+            android:id="@+id/studentEventEarnedPointsText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_weight="3"
-            android:text="@string/lesson_is_attended_text"
+            android:text="@string/event_earned_points_text"
             android:textSize="20sp" />
 
-        <CheckBox
-            android:id="@+id/lessonPerformanceIsAttended"
+        <EditText
+            android:id="@+id/studentEventEarnedPoints"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_weight="1"
+            android:inputType="number"
             android:textSize="20sp" />
     </LinearLayout>
 </LinearLayout>
